# mp3-tag-lister

./: .gitignore  Justfile  LICENSE  Pipfile  README.md  pyproject.toml
mp3_tag_lister/: __init__.py
tests/: test_mp3_tag_lister.py
