[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mp3-tag-lister"
dynamic = ["version"]
description = 'Command-line utility to write specific ID3 tags to a CSV output.'
readme = "README.md"
requires-python = ">=3.8"
# license = {file = "LICENSE"}
keywords = [ "mp3", "id3", "tag", "csv"]

authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]

dependencies = [ "eyed3" ]

[tool.setuptools.dynamic]
version = {attr = "mp3_tag_lister.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["mp3_tag_lister*"]
exclude = ["test*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]

[project.scripts]
mp3_tag_lister = "mp3_tag_lister:main"

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = ["suggested_code.py"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
ignore = ["ISC001"]
# select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PLR2004", # magic number
]
